# pykaldi

./: .bumpversion.cfg  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  INSTALL.sh  LICENSE  README.md  README.rst  add_namespace.sh  build_all.sh  extern_base.sh  setup.cfg  setup.py  use_namespace.sh
kaldi/: CMakeLists.txt  __init__.py  alignment.py  asr.py  segmentation.py
kaldi/base/: CMakeLists.txt  __init__.py  fstream.clif  io-funcs-ext.clif  io-funcs-ext.h  io-funcs-inl.clif  io-funcs.clif  io.py  iostream-ext.h  iostream.clif  kaldi-error.clif  kaldi-math-ext.clif  kaldi-math.clif  math.py  sstream.clif  timer.clif  timer.py
kaldi/chain/: CMakeLists.txt  __init__.py  chain-datastruct.clif  chain-den-graph.clif  chain-denominator.clif  chain-generic-numerator.clif  chain-numerator.clif  chain-supervision-ext.clif  chain-supervision-ext.h  chain-supervision.clif  chain-training-ext.clif  chain-training-ext.h  chain-training.clif  language-model.clif  phone-context.clif
kaldi/cudamatrix/: CMakeLists.txt  __init__.py  array.py  cu-array.clif  cu-device.clif  cu-matrix.clif  cu-matrixdim.clif  cu-sparse-matrix.clif  cu-vector.clif  device.py  matrix.py  matrixdim.py  vector.py
kaldi/decoder/: CMakeLists.txt  __init__.py  _compiler.py  _decoder.py  biglm-faster-decoder.clif  decodable-mapped.clif  decodable-matrix.clif  decodable-sum.clif  faster-decoder.clif  faster.py  grammar-fst-ext.h  grammar-fst.clif  lattice-biglm-faster-decoder.clif  lattice-faster-decoder-ext.clif  lattice-faster-decoder-ext.h  lattice-faster-decoder.clif  lattice-faster-online-decoder-ext.clif  lattice-faster-online-decoder-ext.h  lattice-faster-online-decoder.clif  lattice-simple-decoder.clif  simple-decoder.clif  training-graph-compiler-ext.clif  training-graph-compiler-ext.h  training-graph-compiler.clif
kaldi/feat/: CMakeLists.txt  __init__.py  common.py  fbank.py  feature-common-ext.clif  feature-common-ext.h  feature-common.clif  feature-fbank.clif  feature-functions.clif  feature-mfcc.clif  feature-plp.clif  feature-spectrogram.clif  feature-window.clif  functions.py  mel-computations.clif  mel.py  mfcc.py  online-feature.clif  online.py  pitch-functions.clif  pitch.py  plp.py  resample.clif  signal.clif  signal.py  spectrogram.py  wave-reader.clif  wave.py  window.py
kaldi/fstext/: CMakeLists.txt  __init__.py  _api.py  _clat_ops.py  _index_ops.py  _lat_ops.py  _log_ops.py  _std_ops.py  arc.clif  arctic-weight-ext.h  arctic-weight.clif  clat-construct1-ops.clif  clat-construct2-ops.clif  clat-inplace-ops.clif  clat-ops.clif  compiler.clif  const-fst-ext.h  const-fst.clif  context-fst-inl.clif  context-fst.clif  deterministic-fst.clif  determinize-lattice.clif  drawer.clif  encode.clif  enums.py  expanded-fst.clif  float-weight-ext.h  float-weight.clif  fst-construct1-ops.h  fst-construct2-ops.h  fst-ext.clif  fst-ext.h  fst-inplace-ops.h  fst-operations.clif  fst-operations.h  fst-ops.h  fst.clif  fstext-shims.clif  fstext-shims.h  fstext-utils-inl.clif  (+40 more)
kaldi/gmm/: CMakeLists.txt  __init__.py  _gmm.py  am-diag-gmm.clif  am.py  am_diag.py  common.py  decodable-am-diag-gmm.clif  decodable_am_diag.py  diag-gmm.clif  diag.py  full-gmm-ext.clif  full-gmm-ext.h  full-gmm-normal.clif  full-gmm.clif  full.py  full_normal.py  mle-am-diag-gmm.clif  mle-diag-gmm.clif  mle-full-gmm.clif  mle_am_diag.py  mle_diag.py  mle_full.py  model-common.clif  model-test-common.clif
kaldi/hmm/: CMakeLists.txt  __init__.py  hmm-topology.clif  hmm-utils-ext.clif  hmm-utils-ext.h  hmm-utils.clif  posterior-ext.clif  posterior-ext.h  posterior.clif  posterior.py  topology.py  transition-model.clif  transition_model.py  tree-accu.clif
kaldi/itf/: CMakeLists.txt  __init__.py  clusterable-itf.clif  context-dep-itf.clif  context_dep.py  decodable-itf.clif  decodable.py  online-feature-itf.clif  online_feature.py  options-itf.clif  options.py
kaldi/ivector/: CMakeLists.txt  __init__.py  agglomerative-clustering.clif  ivector-extractor.clif  logistic-regression.clif  plda.clif  voice-activity-detection.clif
kaldi/kws/: CMakeLists.txt  __init__.py  kws-functions.clif
kaldi/lat/: CMakeLists.txt  __init__.py  align.py  arctic-weight-ext.h  arctic-weight.clif  compose-lattice-pruned.clif  confidence.clif  determinize-lattice-pruned.clif  functions.py  kaldi-lattice.clif  lattice-functions.clif  minimize-lattice.clif  phone-align-lattice.clif  push-lattice.clif  sausages.clif  sausages.py  word-align-lattice-lexicon.clif  word-align-lattice.clif
kaldi/lm/: CMakeLists.txt  __init__.py  arpa-file-parser.clif  arpa-lm-compiler.clif  const-arpa-lm.clif  kaldi-rnnlm.clif
kaldi/matrix/: CMakeLists.txt  __init__.py  _double.py  _matrix.py  _str.py  _vector.py  common.py  compressed-matrix.clif  compressed.py  double-matrix-ext.cc  double-matrix-ext.h  functions.py  htk.py  kaldi-matrix-ext.cc  kaldi-matrix-ext.clif  kaldi-matrix-ext.h  kaldi-matrix.clif  kaldi-numpy.cc  kaldi-vector-ext.clif  kaldi-vector-ext.h  kaldi-vector-numpy.cc  kaldi-vector.clif  matrix-common.clif  matrix-ext.cc  matrix-ext.h  matrix-functions.clif  matrix.py  optimization.clif  optimization.py  packed-matrix.clif  packed.py  sp-matrix.clif  sparse-matrix.clif  sparse.py  tp-matrix.clif  vector.py
kaldi/nnet3/: CMakeLists.txt  __init__.py  am-nnet-simple.clif  attention.clif  convolution.clif  decodable-online-looped.clif  decodable-simple-looped.clif  natural-gradient-online.clif  nnet-am-decodable-simple.clif  nnet-analyze.clif  nnet-attention-component.clif  nnet-batch-compute.clif  nnet-chain-diagnostics.clif  nnet-chain-example-ext.clif  nnet-chain-example-ext.h  nnet-chain-example-merger.clif  nnet-chain-example.clif  nnet-chain-training.clif  nnet-combine.clif  nnet-combined-component.clif  nnet-common.clif  nnet-compile-looped.clif  nnet-compile-utils.clif  nnet-compile.clif  nnet-component-itf.clif  nnet-computation-graph-ext.clif  nnet-computation-graph.clif  nnet-computation.clif  nnet-compute.clif  nnet-convolutional-component.clif  nnet-descriptor.clif  nnet-diagnostics.clif  nnet-example-utils.clif  nnet-example.clif  (+12 more)
(+394 files in other folders)
