set(PACKAGE "kaldi")

add_subdirectory("base")
add_subdirectory("chain")
add_subdirectory("cudamatrix")
add_subdirectory("decoder")
add_subdirectory("feat")
add_subdirectory("fstext")
add_subdirectory("gmm")
add_subdirectory("hmm")
add_subdirectory("itf")
add_subdirectory("ivector")
add_subdirectory("kws")
add_subdirectory("lat")
add_subdirectory("lm")
add_subdirectory("matrix")
add_subdirectory("nnet3")
add_subdirectory("online2")
add_subdirectory("rnnlm")
add_subdirectory("sgmm2")
add_subdirectory("tfrnnlm")
add_subdirectory("transform")
add_subdirectory("tree")
add_subdirectory("util")
